# mediapipe

./: WORKSPACE  bazel-mediapipe  mystereocalib_2.yml
bazel-mediapipe/mediapipe/examples/desktop/: demo_run_graph_main_gpu.cc
example_client/: CMakeLists.txt  client.cpp  client.h  main.cpp
mediapipe/calculators/util/: landmarks_to_render_data_calculator.cc
mediapipe/examples/desktop/: BUILD  demo_run_graph_main_gpu.cc  demo_run_graph_main_gpu_out.cc  demo_run_graph_main_gpu_out_multi.cc  demo_run_graph_main_gpu_out_multi_thread.cc  demo_run_graph_main_gpu_out_multi_thread_udp.cc  demo_run_graph_main_gpu_out_thread.cc  multi_vid_graph_main.cc  server.cpp  server.h
mediapipe/examples/desktop/multi_hand_tracking/: BUILD
mediapipe/framework/formats/: BUILD  coordinate.proto
mediapipe/framework/port/: BUILD
mediapipe/graphs/hand_tracking/subgraphs/: hand_landmark_gpu.pbtxt
